[package]
name = "kubemq-rust-sdk"
version = "0.1.0"
edition = "2021"

[[bin]]
name= "queue-example"
path= "./examples/queue/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
prost = "0.12.1"
tonic = { version = "0.10.2", features = ["tls"] }
uuid = { version = "1.5.0", features = ["v4"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
derive_more = "0.99.17"

[build-dependencies]
tonic-build = "0.10.2"
